# Ethos

./: .gitignore  Cargo.toml  LICENSE  README.md  audit.toml  ethos.toml.example  integration-test-context.mjs  integration-test.mjs  package-lock.json  package.json  search-test.js
.github/: PULL_REQUEST_TEMPLATE.md
docs/: OPENCLAW_INTEGRATION.md  gap-resolution.md
docs/reviews/: review-story-002-rust-scaffold.md  review-story-002.md  review-story-003.md  review-story-004-db-ingest.md  review-story-004.md  review-story-005.md  review-story-006.md  review-story-007.md  review-story-008.md  review-story-009.md  review-story-010.md  review-story-011.md
docs/runbooks/: TEMPLATE.md  context-injection.md  embedder.md  ethos-ingest.md  ethos-server.md  ingest-subsystem.md  retrieval.md  runbook-009-consolidation.md  runbook-010-decay.md  runbook-011-http-api.md  spreading-activation.md
docs/stories/: story-001-db-schema.md  story-002-rust-scaffold.md  story-003-ingest-hook.md  story-004-db-ingest.md  story-005-embedder.md  story-006-retrieval.md  story-007-context-injection.md  story-008-spreading-activation.md  story-009-consolidation-engine.md  story-010-ebbinghaus-decay.md  story-011-rest-api-qmd-protocol.md  story-012-onnx-fallback.md  story-013-reembed-backfill.md
ethos-cli/: Cargo.toml
ethos-cli/src/: main.rs
ethos-core/: Cargo.toml
ethos-core/src/: config.rs  db.rs  embeddings.rs  error.rs  graph.rs  ipc.rs  lib.rs  onnx_embedder.rs
ethos-core/src/models/: episode.rs  fact.rs  graph.rs  mod.rs  session.rs  vector.rs  workflow.rs
ethos-ingest/: Cargo.toml
ethos-ingest-ts/: jest.config.js  package-lock.json  package.json  tsconfig.json
ethos-ingest-ts/src/: client.ts  index.ts
ethos-ingest-ts/tests/: client-request.test.ts  client.test.ts  ipc.test.ts  setup.test.ts
ethos-ingest/src/: pipeline.rs
ethos-server/: Cargo.toml
ethos-server/src/: http.rs  lib.rs  main.rs  router.rs  server.rs
ethos-server/src/subsystems/: consolidate.rs  decay.rs  embedder.rs  ingest.rs  linker.rs  mod.rs  reembed.rs  retrieve.rs
ethos-server/tests/: embed_integration.rs  http_integration.rs  ingest_integration.rs
migrations/: 001_initial_schema.sql  002_story_004_ingest.sql  003_story_010_pruned_flag.sql  20260224000000_onnx_dimension_option.sql  README.md
scripts/: download-onnx-model.sh  rebuild.sh
