[package]
name = "ethos-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
pgvector.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio-retry.workspace = true
async-trait.workspace = true
ort.workspace = true
tokenizers.workspace = true
ndarray.workspace = true

[dev-dependencies]
wiremock = "0.6"
