[package]
name = "ethos-server"
version.workspace = true
edition.workspace = true

[lib]
name = "ethos_server"
path = "src/lib.rs"

[[bin]]
name = "ethos-server"
path = "src/main.rs"

[dependencies]
ethos-core = { path = "../ethos-core" }
dotenvy = "0.15"
ethos-ingest = { path = "../ethos-ingest" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-util.workspace = true
clap.workspace = true
futures.workspace = true
bytes.workspace = true
reqwest.workspace = true
tokio-retry.workspace = true
pgvector.workspace = true
num_cpus.workspace = true
shellexpand.workspace = true
regex.workspace = true

axum = "0.7"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
